[gd_scene load_steps=2 format=3 uid="uid://bvn8xk4h20am1"]

[ext_resource type="Script" uid="uid://cg52sqtyyudst" path="res://cs/tests/卡牌相关/卡牌悬停预览/CardHoverPreviewTest.gd" id="1_test"]

[node name="CardHoverPreviewTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "卡牌悬停预览功能测试"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SettingsPanel" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="SettingsTitle" type="Label" parent="VBoxContainer/SettingsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16
text = "设置选项"

[node name="DelayContainer" type="HBoxContainer" parent="VBoxContainer/SettingsPanel"]
layout_mode = 2

[node name="DelayLabel" type="Label" parent="VBoxContainer/SettingsPanel/DelayContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "悬停延时："
vertical_alignment = 1

[node name="DelaySlider" type="HSlider" parent="VBoxContainer/SettingsPanel/DelayContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 2.0
step = 0.1
value = 0.8

[node name="DelayValueLabel" type="Label" parent="VBoxContainer/SettingsPanel/DelayContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.6, 1)
text = "0.8秒"
vertical_alignment = 1

[node name="PreviewToggle" type="CheckBox" parent="VBoxContainer/SettingsPanel"]
layout_mode = 2
button_pressed = true
text = "启用悬停预览功能"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CardsContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1
